<resources>
    <string name="app_name">Delivery Robot</string>
    <string name="SM">Go for delivery</string>
    <string name="SMM">Stop Cleaning</string>
    <string name="ip"> Delivery Robot IP Address</string>
    <string name="save"> Save IP Address</string>
    <string name="Lon1">Longitude 1</string>
    <string name="lat1">Latitude 1</string>
    <string name="Lon2">Longitude 2</string>
    <string name="lat2">Latitude 2</string>
    <string name="Lon3">Longitude 3</string>
    <string name="lat3">Latitude 3</string>
    <string name="Lon4">Longitude 4</string>
    <string name="lat4">Latitude 4</string>
    <string name="w1">Waypoint 1</string>
    <string name="w2">Waypoint 2</string>
    <string name="w3">Waypoint 3</string>
    <string name="w4">Waypoint 4</string>
    <string name="GPS"> GPS Details</string>
    <string name="GPSB">GPS Info</string>
    <string name="sta">Nos of satellite:</string>
    <string name="lon">Lon:</string>
    <string name="lat">Lat:</string>
    <string name="sta1">None</string>
    <string name="latt">None</string>
    <string name="lonn">None</string>
    <string name="m1">Mark point 1</string>
    <string name="m2">Mark point 2</string>
    <string name="m3">Mark point 3</string>
    <string name="m4">Mark point 4</string>

</resources>